# WIREDUP

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  CLOUDFLARE_DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  GITHUB_PUSH.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  RELEASE_NOTES.md  SECURITY.md  SKILLS.md  TESTING_SUMMARY.md  USER_JOURNEY.md  VERIFICATION_REPORT.md  VERIFICATION_SUMMARY.md  demo_user_journey.py  requirements.txt  setup.py
_docs/: README.md  demo_user_journey.py.md
_docs/examples/: README.md  multi_agent.py.md
_docs/src/: README.md  __init__.py.md
_docs/tests/: README.md  test_swarm_orchestrator.py.md
config/: default.json
examples/: basic_agent.py  mcp_integration.py  multi_agent.py  ssh_deployment.py
public/: index.html
rust-terminal/: BUILD.md  Cargo.toml  Cargo.toml.metadata  README.md
rust-terminal/.github/workflows/: rust.yml
rust-terminal/examples/: simple.rs
rust-terminal/src/: main.rs
rust-terminal/src/ai/: autowire_bridge.rs  mod.rs  nlp.rs  suggestions.rs
rust-terminal/src/core/: command.rs  executor.rs  mod.rs  terminal.rs
rust-terminal/src/plugins/: builtin.rs  manager.rs  mod.rs
rust-terminal/src/ui/: mod.rs  themes.rs  tui.rs  widgets.rs
rust-terminal/src/utils/: config.rs  history.rs  mod.rs
src/: __init__.py  cli.py
src/agents/: __init__.py  base_agent.py  swarm_orchestrator.py  synthetic_worker.py
src/config/: __init__.py  env_manager.py  loader.py
src/core/: __init__.py  autowire.py  registry.py
tests/: test_autowire.py  test_autowire_unittest.py  test_swarm_cli.py  test_swarm_orchestrator.py  test_user_journey.py
(+7 files in other folders)
