[package]
name = "nexterm"
version = "1.0.0"
edition = "2021"
authors = ["NexTerm Team <nexterm@terminal.dev>"]
description = "Revolutionary AI-powered terminal experience with modern UI and intelligent features"
license = "MIT"
repository = "https://github.com/yourusername/nexterm"
keywords = ["terminal", "shell", "tui", "ai", "command-line"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Terminal UI
ratatui = "0.25"
crossterm = "0.27"

# Command execution and parsing
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
shellexpand = "3.1"

# Text processing and syntax
syntect = "5.1"
regex = "1.10"
fuzzy-matcher = "0.3"

# File system operations
walkdir = "2.4"
notify = "6.1"
ignore = "0.4"

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# Process management
nix = { version = "0.27", features = ["process", "signal"] }
libc = "0.2"

# HTTP client for AI integration
reqwest = { version = "0.11", features = ["json"] }

# Terminal colors and styling
colored = "2.1"
unicode-width = "0.1"

# Command history and completion
rustyline = "13.0"

# Configuration file watching
dirs = "5.0"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[[bin]]
name = "nexterm"
path = "src/main.rs"
